--- a/light_space/package.json
+++ b/light_space/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "paper": "^0.12.15",
     "path": "^0.12.7",
     "python-shell": "^1.0.7"
   }
