--- a/light_space/client/tsconfig.json
+++ b/light_space/client/tsconfig.json
@@ -3,7 +3,9 @@
     "target": "ES2017",
     "module": "es2015",
     "sourceMap": true,
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "strict": true,
+    "noImplicitAny": true
   },
   "files": [
       "main.ts"
