--- a/light_space/client/tsconfig.json
+++ b/light_space/client/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "ES2017",
-    "module": "es2015",
+    "target": "es2020",
+    "module": "es2020",
     "sourceMap": true,
     "moduleResolution": "node",
     "strict": true,
