--- a/light_space/package.json
+++ b/light_space/package.json
@@ -21,6 +21,7 @@
     "express": "^4.16.4",
     "paper": "^0.12.15",
     "path": "^0.12.7",
+    "perspective-transform": "^1.1.3",
     "python-shell": "^1.0.7"
   }
 }
