update tsconfig to handle ... react being loaded form a CDN. we almost got into a huge downward cycle of import -> relative import problem, so we fixed this for now by making the compiler be quiet, and just allowing us to use @types for react typings.

--- a/light_space/client/tsconfig.json
+++ b/light_space/client/tsconfig.json
@@ -5,9 +5,11 @@
     "sourceMap": true,
     "moduleResolution": "node",
     "strict": true,
-    "noImplicitAny": true
+    "noImplicitAny": true,
+    "allowSyntheticDefaultImports": true,
+    "allowUmdGlobalAccess": true
   },
   "files": [
-      "main.ts"
+      "main.ts", "livelit-windows.ts"
   ]
 }
