loading from ui-root.tsx working

--- a/light_space/client/tsconfig.json
+++ b/light_space/client/tsconfig.json
@@ -11,6 +11,6 @@
     "allowUmdGlobalAccess": true
   },
   "files": [
-      "main.ts", "pair.ts", "program-pane.tsx"
+      "main.ts", "pair.ts", "ui-root.tsx", "program-pane.tsx"
   ]
 }
