--- a/light_space/package.json
+++ b/light_space/package.json
@@ -22,6 +22,7 @@
     "@types/react-dom": "^17.0.9",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "nodemon": "^2.0.15",
     "paper": "^0.12.15",
     "path": "^0.12.7",
     "perspective-transform": "^1.1.3",
