--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,5 @@
-client/lib/* -linguist-detectable
-axidraw/** -linguist-detectable
+client/lib/* -linguist-vendored
+axidraw/* -linguist-vendored
+axidraw/pyaxidraw/* -linguist-vendored
+axidraw/axicli/* -linguist-vendored
+axidraw/test/* -linguist-vendored
