--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
-client/lib/* -linguist-vendored
-axidraw/* -linguist-vendored
-axidraw/pyaxidraw/* -linguist-vendored
-axidraw/axicli/* -linguist-vendored
-axidraw/test/* -linguist-vendored
+client/lib/* linguist-vendored
+axidraw/* linguist-vendored
+axidraw/pyaxidraw/* linguist-vendored
+axidraw/axicli/* linguist-vendored
+axidraw/test/* linguist-vendored
