--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
+client/lib/* -linguist-detectable
+
 client/lib/* linguist-vendored
 axidraw/* linguist-vendored
 axidraw/pyaxidraw/* linguist-vendored
