--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
     "paper": "^0.12.15",
     "path": "^0.12.7",
     "perspective-transform": "^1.1.3",
-    "python-shell": "^1.0.7"
+    "python-shell": "^1.0.7",
+    "three": "^0.137.5"
+  },
+  "devDependencies": {
+    "@types/three": "^0.137.0"
   }
 }
