--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -11,7 +11,6 @@
     "allowUmdGlobalAccess": true
   },
   "files": [
-      "main.ts", "verso.ts", "ui-root.tsx", "program-pane.tsx",
-      "visualization-space.tsx"
+      "main.ts", "verso.ts", "ui-root.tsx", "program-pane.tsx"
   ]
 }
