--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "path": "^0.12.7",
     "perspective-transform": "^1.1.3",
     "python-shell": "^1.0.7",
+    "sqlite3": "https://github.com/mapbox/node-sqlite3/tarball/master",
     "three": "^0.137.5"
   },
   "devDependencies": {
