--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/highlightjs": "^9.12.2",
     "@types/react": "^17.0.30",
     "@types/react-dom": "^17.0.9",
+    "better-sqlite3": "^7.5.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "nodemon": "^2.0.15",
@@ -27,7 +28,6 @@
     "path": "^0.12.7",
     "perspective-transform": "^1.1.3",
     "python-shell": "^1.0.7",
-    "sqlite3": "https://github.com/mapbox/node-sqlite3/tarball/master",
     "three": "^0.137.5"
   },
   "devDependencies": {
