--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "path": "^0.12.7",
     "perspective-transform": "^1.1.3",
     "python-shell": "^1.0.7",
-    "three": "^0.137.5"
+    "three": "^0.137.5",
+    "typescript": "^4.6.2"
   },
   "devDependencies": {
     "@types/three": "^0.137.0"
