--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/jhaazpr/machine-o-matic#readme",
   "dependencies": {
+    "@types/better-sqlite3": "^7.5.0",
+    "@types/express": "^4.17.13",
     "@types/highlightjs": "^9.12.2",
     "@types/react": "^17.0.30",
     "@types/react-dom": "^17.0.9",
@@ -28,10 +30,12 @@
     "path": "^0.12.7",
     "perspective-transform": "^1.1.3",
     "python-shell": "^1.0.7",
+    "serialport": "^10.4.0",
     "three": "^0.137.5",
     "typescript": "^4.6.2"
   },
   "devDependencies": {
+    "@types/node": "^17.0.21",
     "@types/three": "^0.137.0"
   }
 }
