per rationibus STULTIS typescriptis sint duo tsconfig compilare server.ts requirit methodum commonjs quamquam requirint etiam methodum es2020 pro tabula frontis.

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es2021",
-    "module": "commonjs",
+    "module": "es2020",
     "sourceMap": true,
     "moduleResolution": "node",
     "strict": true,
@@ -14,6 +14,6 @@
       "./*.ts", "./*.tsx"
   ],
   "typeRoots": [
-      "node_modules/@types"
+      "../node_modules/@types"
   ]
 }
